# nft-loans

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  arcade.py  database.py  docker-compose.local.yaml  docker-compose.yaml  manage.py  nftfi.py  preProductionTODO.md  pyproject.toml  requirements.txt  x2y2.py
.github/workflows/: deploy-staging.yaml
aggregators/: admin.py  apps.py  serializers.py  urls.py  views.py  views_example.py
aggregators/fetchers/: base.py  currency.py  nft_metadata.py  one_time_runner.py
aggregators/fetchers/arcade/: main.py
aggregators/fixtures/: collections.json
aggregators/migrations/: 0001_initial.py  0002_benddaoborrow_benddaoliquidate_benddaoredeem.py  0003_alter_arcadeloan_block_number_and_more.py  0004_nftfiliquidated_nftfirenegotiated_nftfirepaid_and_more.py  0005_x2y2offer.py  0006_collection.py  0006_collection_nftfioffers.py  0007_rename_nftfioffers_nftfioffer.py  0008_arcadeloanclaimed_arcadeloanrepaid_and_more.py  0008_rename_date_nftfioffer_create_time_and_more.py  0009_alter_nftfioffer_apr_alter_x2y2offer_apr.py  0009_remove_arcadeloanclaimed_amount_and_more.py  0010_collectionoffer_remove_x2y2offer_collection_and_more.py  0011_merge_20230223_1211.py  0012_currencymetadata.py  0013_collectionoffer_currency_collectionoffer_fee_and_more.py  0014_listing.py  0015_alter_listing_immutable_token_id.py
aggregators/models/: __init__.py  arcade.py  benddao.py  general.py  helper.py  nftfi.py  x2y2.py
aggregators/offers/: base.py  recommendation_algo.py  recommendation_data.json  recommendation_helper.py  recommendation_knapsack.py  recommendation_multi_knapsack.py  recommendation_multi_knapsack_chatgpt.py
aggregators/serializers/: listing.py  loan.py  offer.py
aggregators/tasks/: __init__.py  fetcher.py  listing.py  offers.py
aggregators/views/: __init__.py  loan.py  offer.py
db_local/: .env.example  Makefile  README.md  docker-compose.yaml
nft_loans/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nft_loans/configs/: .env.dev  .env.example.local  .env.staging
(+7 files in other folders)
